--- a/index.html
+++ b/index.html
@@ -1,327 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework13</title>
-    <link rel="stylesheet" href="./style.css">
-    <script src="https://kit.fontawesome.com/f30f0231eb.js" crossorigin="anonymous"></script>
+    <title>Homework14-15</title>
+    <link rel="stylesheet" href="./form.css">
 </head>
-
 <body>
-    <nav class="navbar" style="margin-bottom: 40px;">
-        <h1 class="logo">
-            <a href="index.html">Clothes Store.</a>
-        </h1>
-        <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Shop</a></li>
-            <li><a href="#">New Arrival</a></li>
-            <li><a href="#">Category</a></li>
-            <li><a href="#">About</a></li>
-            <li><a href="#">Contact</a></li>
-        </ul>
-        <div class="btn-group">
-            <button class="btn btn-login">Login</button>
-            <button class="btn btn-signup">Sign up</button>
+    <div class="container-register">
+        <div>
+            <h1>Login</h1>
+            <p>
+                Enter your credentials to access your account.
+            </p>
         </div>
-        <a href="#" class="humburgur"><i class="fa-solid fa-bars"></i></a>
-    </nav>
-
-    <nav class="second-navbar">
-        <ul>
-            <li>
-                <a href="#"><i class="fa-solid fa-house"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa-solid fa-shop"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa-solid fa-cart-plus"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa-solid fa-shirt"></i></a>
-            </li>
-            <li>
-                <a href="#"><i class="fa-solid fa-layer-group"></i></a>
-            </li>
-        </ul>
-    </nav>
-
-    <div class="container">
-        <div class="row">
-            <div class="col">
-                <div class="card">
-                    <div class="card-badge">New Arrival</div>
-                    <div class="card-img">
-                        <img src="https://zandokh.com/image/catalog/products/2025-11/22225081609/TAKK6075.jpg"
-                            alt="img">
-                    </div>
-                    <div class="card-body">
-                        <h3>Mesh Jersey T-Shirt</h3>
-                        <p>$12.59</p>
-                        <div class="btn-group" style="display: flex;justify-content: space-between;">
-                            <button>
-                                <span><i class="fa-solid fa-cart-plus"></i></span>
-                                Add to Cart
-                            </button>
-                            <a href="./productdetail.html">
-                                <button style="background-color: #fb2916;">Product Detail</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-badge">New Arrival</div>
-                    <div class="card-img">
-                        <img src="https://zandokh.com/image/catalog/products/2025-11/22225081609/TAKK6057.jpg"
-                            alt="img">
-                    </div>
-                    <div class="card-body">
-                        <h3>Mesh Jersey T-Shirt</h3>
-                        <p>$12.59</p>
-                        <div class="btn-group" style="display: flex;justify-content: space-between;">
-                            <button>
-                                <span><i class="fa-solid fa-cart-plus"></i></span>
-                                Add to Cart
-                            </button>
-                            <a href="./productdetail.html">
-                                <button style="background-color: #fb2916;">Product Detail</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-badge">New Arrival</div>
-                    <div class="card-img">
-                        <img src="https://zandokh.com/image/catalog/products/2025-11/22225081609/TAKK6075.jpg"
-                            alt="img">
-                    </div>
-                    <div class="card-body">
-                        <h3>Mesh Jersey T-Shirt</h3>
-                        <p>$12.59</p>
-                        <div class="btn-group" style="display: flex;justify-content: space-between;">
-                            <button>
-                                <span><i class="fa-solid fa-cart-plus"></i></span>
-                                Add to Cart
-                            </button>
-                            <a href="./productdetail.html">
-                                <button style="background-color: #fb2916;">Product Detail</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-badge">New Arrival</div>
-                    <div class="card-img">
-                        <img src="https://zandokh.com/image/catalog/products/2025-11/22225081609/TAKK6057.jpg"
-                            alt="img">
-                    </div>
-                    <div class="card-body">
-                        <h3>Mesh Jersey T-Shirt</h3>
-                        <p>$12.59</p>
-                        <div class="btn-group" style="display: flex;justify-content: space-between;">
-                            <button>
-                                <span><i class="fa-solid fa-cart-plus"></i></span>
-                                Add to Cart
-                            </button>
-                            <a href="./productdetail.html">
-                                <button style="background-color: #fb2916;">Product Detail</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-badge">New Arrival</div>
-                    <div class="card-img">
-                        <img src="https://zandokh.com/image/catalog/products/2025-11/22225081609/TAKK6075.jpg"
-                            alt="img">
-                    </div>
-                    <div class="card-body">
-                        <h3>Mesh Jersey T-Shirt</h3>
-                        <p>$12.59</p>
-                        <div class="btn-group" style="display: flex;justify-content: space-between;">
-                            <button>
-                                <span><i class="fa-solid fa-cart-plus"></i></span>
-                                Add to Cart
-                            </button>
-                            <a href="./productdetail.html">
-                                <button style="background-color: #fb2916;">Product Detail</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-badge">New Arrival</div>
-                    <div class="card-img">
-                        <img src="https://zandokh.com/image/catalog/products/2025-11/22225081609/TAKK6057.jpg"
-                            alt="img">
-                    </div>
-                    <div class="card-body">
-                        <h3>Mesh Jersey T-Shirt</h3>
-                        <p>$12.59</p>
-                        <div class="btn-group" style="display: flex;justify-content: space-between;">
-                            <button>
-                                <span><i class="fa-solid fa-cart-plus"></i></span>
-                                Add to Cart
-                            </button>
-                            <a href="./productdetail.html">
-                                <button style="background-color: #fb2916;">Product Detail</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-badge">New Arrival</div>
-                    <div class="card-img">
-                        <img src="https://zandokh.com/image/catalog/products/2025-11/22225081609/TAKK6075.jpg"
-                            alt="img">
-                    </div>
-                    <div class="card-body">
-                        <h3>Mesh Jersey T-Shirt</h3>
-                        <p>$12.59</p>
-                        <div class="btn-group" style="display: flex;justify-content: space-between;">
-                            <button>
-                                <span><i class="fa-solid fa-cart-plus"></i></span>
-                                Add to Cart
-                            </button>
-                            <a href="./productdetail.html">
-                                <button style="background-color: #fb2916;">Product Detail</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-badge">New Arrival</div>
-                    <div class="card-img">
-                        <img src="https://zandokh.com/image/catalog/products/2025-11/22225081609/TAKK6057.jpg"
-                            alt="img">
-                    </div>
-                    <div class="card-body">
-                        <h3>Mesh Jersey T-Shirt</h3>
-                        <p>$12.59</p>
-                        <div class="btn-group" style="display: flex;justify-content: space-between;">
-                            <button>
-                                <span><i class="fa-solid fa-cart-plus"></i></span>
-                                Add to Cart
-                            </button>
-                            <a href="./productdetail.html">
-                                <button style="background-color: #fb2916;">Product Detail</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-badge">New Arrival</div>
-                    <div class="card-img">
-                        <img src="https://zandokh.com/image/catalog/products/2025-11/22225081609/TAKK6075.jpg"
-                            alt="img">
-                    </div>
-                    <div class="card-body">
-                        <h3>Mesh Jersey T-Shirt</h3>
-                        <p>$12.59</p>
-                        <div class="btn-group" style="display: flex;justify-content: space-between;">
-                            <button>
-                                <span><i class="fa-solid fa-cart-plus"></i></span>
-                                Add to Cart
-                            </button>
-                            <a href="./productdetail.html">
-                                <button style="background-color: #fb2916;">Product Detail</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col">
-                <div class="card">
-                    <div class="card-badge">New Arrival</div>
-                    <div class="card-img">
-                        <img src="https://zandokh.com/image/catalog/products/2025-11/22225081609/TAKK6057.jpg"
-                            alt="img">
-                    </div>
-                    <div class="card-body">
-                        <h3>Mesh Jersey T-Shirt</h3>
-                        <p>$12.59</p>
-                        <div class="btn-group" style="display: flex;justify-content: space-between;">
-                            <button>
-                                <span><i class="fa-solid fa-cart-plus"></i></span>
-                                Add to Cart
-                            </button>
-                            <a href="./productdetail.html">
-                                <button style="background-color: #fb2916;">Product Detail</button>
-                            </a>
-                        </div>
-                    </div>
-                </div>
-            </div>
-        </div>
+        <form >
+            <div class="form-control">
+                <input type="text" id="username" name="username" required>
+                <label for="username">Email or Username</label>
+            </div> 
+            <div class="form-control">
+                <input type="text" id="password" name="password" required>
+                <label for="password">Password</label>
+            </div> 
+            <a href="./home.html" class="btn-submit">Login</a>
+            <p>
+                Already have an account? <a href="./index.html">register</a>
+            </p>
+        </form>
     </div>
-
-    <footer class="footer" style="background-color: #e7e7e79d;margin-top: 30px;">
-        <main>
-            <div class="top">
-                <section>
-                    <h3>Menu</h3>
-                    <ul>
-                        <li><a href="#">Home</a></li>
-                        <li><a href="#">Shop</a></li>
-                        <li><a href="#">New Arrival</a></li>
-                        <li><a href="#">Category</a></li>
-                        <li><a href="#">About</a></li>
-                        <li><a href="#">Contact</a></li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>Follow Us</h3>
-                    <ul>
-                        <li><a href="#">Facebook</a></li>
-                        <li><a href="#">Instagram</a></li>
-                        <li><a href="#">TikTok</a></li>
-                        <li><a href="#">Telegram</a></li>
-                        <li><a href="#">X</a></li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>Customer Services</h3>
-                    <ul>
-                        <li><a href="#">Privacy Policy</a></li>
-                        <li><a href="#">FAQS</a></li>
-                        <li><a href="#">Guide</a></li>
-                    </ul>
-                </section>
-                <section>
-                    <h3>Contact Us</h3>
-                    <ul>
-                        <li><a href="#">example@gmail.com</a></li>
-                        <li><a href="#">(+855) xxx xxx xxx</a></li>
-                        <li><a href="#">Telegram</a></li>
-                    </ul>
-                </section>
-            </div>
-            <hr />
-            <div class="bottom">
-                <p>&copy; 2025 Meng Sonly. All rights reserved.</p>
-                <p>Cambodia</p>
-            </div>
-        </main>
-    </footer>
 </body>
-
 </html>
