--- a/productdetail.html
+++ b/productdetail.html
@@ -3,12 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Homework13 - Product Detail</title>
+    <title>Homework14-15 - Product Detail</title>
     <link rel="stylesheet" href="./productdetail.css">
 </head>
 <body>
     <div class="header">
-        <a href="./index.html">Back to Shopping</a>
+        <a href="./home.html">Back to Shopping</a>
         <h1>Product Detail</h1>
     </div>
     <div class="container">
